Snav: Fix faulty focus jump when exiting scrollable area

When we exit a scrollable area A, if A contains the focused
element F but F is offscreen, then make spatial navigation
start searching from A's visual box.

Bug: 804669
Change-Id: I15b0f41426d7632fe9ec62d77a414d592e3631c0